Fixed issue of about card names overflowing.

--- a/src/index.css
+++ b/src/index.css
@@ -243,7 +243,7 @@ a {
 }
 
 .aboutName {
-	font-size: 1rem;
+	font-size: 1.2vw;
 	color: #FFFFFF;
 	margin-bottom: 0.5rem;
 	margin-left: .8rem;
